Cifrado simetrico de corrimiento

--- a/Simetric_c.ipynb
+++ b/Simetric_c.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "3676028e-fd62-4958-9656-3baa7d6a3251",
    "metadata": {},
    "outputs": [],
@@ -103,6 +103,27 @@
     "        else:\n",
     "            resultado += i  # Deja los caracteres que no son letras sin cambios\n",
     "    return resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dbf2f689-af39-4afd-b05f-4f5b6d73b457",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'zllhk://yalzmt.uge/ZsqvwwHwjmqwjg/ujqhlgyjshzq-jwsvafy-kweafsj'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cifrado_corrimiento('https://github.com/HaydeePeruyero/cryptography-reading-seminar', 18)"
    ]
   },
   {
@@ -171,165 +192,6 @@
     "mensaje_descifrado = descifrado_corrimiento(mensaje_cifrado, desplazamiento)\n",
     "print(\"Mensaje descifrado:\", mensaje_descifrado)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "67cbc633-a8f8-4ad6-af24-ec49841ebaef",
-   "metadata": {},
-   "source": [
-    "# Cifrado por sustitución"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2e50dbca-59e3-4256-990f-890318a48eb6",
-   "metadata": {},
-   "source": [
-    "**Definir el alfabeto estándar**\n",
-    "\n",
-    "Definimos la variable alfabeto, que contiene las 26 letras del alfabeto en mayúsculas. Este alfabeto es lo que se utilizará como referencia para saber qué letra se debe reemplazar según la clave de sustitución."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "9539869d-bc95-42dd-9aa4-1405b2b923fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alfabeto = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5b7a5c09-8e6b-43a3-8bb3-4bb99bb1b76d",
-   "metadata": {},
-   "source": [
-    "**Convertir el texto a mayúsculas y recorrer cada letra**\n",
-    "\n",
-    "Se usa un bucle for para recorrer cada carácter del texto. Antes de procesar cada letra, vamos a convertir el texto a mayúsculas con `texto.upper()`. Esto garantiza que no haya diferencias entre mayúsculas y minúsculas, y que todas las letras coincidan con el alfabeto que hemos definido."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fa671e4f-de42-4db1-8305-9d7f569c29e8",
-   "metadata": {},
-   "source": [
-    "**Buscar el índice de la letra en el alfabeto**\n",
-    "\n",
-    "Cuando el carácter i es una letra, buscamos su posición en el alfabeto estándar usando `alfabeto.index(i)`. Esto nos da el índice de la letra en el alfabeto, que nos sirve para encontrar la letra correspondiente en la clave de sustitución.\n",
-    "\n",
-    "Por ejemplo, si i = 'A', entonces alfabeto.index('A') devolvería 0, ya que 'A' es la primera letra del alfabeto (índice 0)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c31d7294-7346-4a49-ae51-c70716fdde0b",
-   "metadata": {},
-   "source": [
-    "**Reemplazar la letra con la correspondiente en la clave**\n",
-    "\n",
-    "Después de encontrar el índice de la letra en el alfabeto estándar, usamos ese índice para obtener la letra correspondiente en la clave de sustitución. Por ejemplo, si el índice es 0, la letra será la primera letra de la clave de sustitución."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1aa12f78-2496-494e-a23c-d0bbc8ba419a",
-   "metadata": {},
-   "source": [
-    "**Manejar caracteres que no son letras**\n",
-    "\n",
-    "Si el carácter i no está en el alfabeto (es decir, no es una letra), simplemente lo agregamos a resultado sin cambiarlo. Esto asegura que espacios, números, y otros símbolos no se vean afectados por el cifrado."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "35fe6b90-cb4d-4cf5-9cd4-80fae6767d72",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cifrado_sustitucion(texto, clave):\n",
-    "    alfabeto = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
-    "    resultado = \"\"\n",
-    "    for i in texto.upper():\n",
-    "        if i in alfabeto:\n",
-    "            resultado += clave[alfabeto.index(i)]\n",
-    "        else:\n",
-    "            resultado += i  # Dejar otros caracteres sin cambios\n",
-    "    return resultado"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "8278f8af-bdb5-4907-a40a-460467f78280",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IGSQ DXFRG!\n"
-     ]
-    }
-   ],
-   "source": [
-    "texto = \"Hola Mundo!\"\n",
-    "clave = \"QWERTYUIOPASDFGHJKLZXCVBNM\"\n",
-    "print(cifrado_sustitucion(texto, clave))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "89c9f323-1184-4ad2-b867-c0b17c817e38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def descifrado_sustitucion(texto_cifrado, clave):\n",
-    "    alfabeto = \"ABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
-    "    resultado = \"\"\n",
-    "    \n",
-    "    for i in texto_cifrado.upper():\n",
-    "        if i in clave:\n",
-    "            resultado += alfabeto[clave.index(i)]\n",
-    "        else:\n",
-    "            resultado += i  # Dejar otros caracteres sin cambios\n",
-    "    return resultado\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "50a9680c-4b00-4c81-b05b-a3ad978963e7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mensaje descifrado: HOLA MUNDO!\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Mensaje cifrado con sustitución usando la clave\n",
-    "mensaje_cifrado = \"IGSQ DXFRG!\"\n",
-    "clave = \"QWERTYUIOPASDFGHJKLZXCVBNM\"\n",
-    "\n",
-    "# Usamos la función para descifrar\n",
-    "mensaje_descifrado = descifrado_sustitucion(mensaje_cifrado, clave)\n",
-    "print(\"Mensaje descifrado:\", mensaje_descifrado)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afed13e3-8275-4ed7-89fb-cbdf18b881fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
